* feat(backmp11): Improve support for the `deferred_events` property in hierarchical state machines (https://github.com/boostorg/msm/issues/173[#173])
* feat(backmp11): Improve runtime performance with a `flat_fold` dispatch strategy (https://github.com/boostorg/msm/issues/180[#180])

== Boost 1.90

* feat(backmp11): New back-end backmp11, requires C++ 17
* fix(back): boost::any stopped working as Kleene event (https://github.com/boostorg/msm/issues/87[#87])
* feat: The documentation has been refurbished, it is now built with Antora

[[boost-185]]

== Boost 1.85

* Backend update (back11). Requires C++ 11. The documentation now uses
it as default.
* New front-end (PlantUML). Requires C++ 20
* Div. bugfixes

[[boost-172]]

== Boost 1.72

* Merged from develop new implementation of deferred events
* Div. bugfixes

[[boost-157]]

== Boost 1.57

* Fixed BOOST_MSM_EUML_EVENT_WITH_ATTRIBUTES (broken in 1.56).
* Fixed execute_queued_events, added execute_single_queued_event
* Fixed warnings for unused variables

[[boost-156]]

== Boost 1.56

* Bugfix: no_transition in case of an exception.
* Bugfix: Trac 9280
* Bugfix: incomplete namespace names in eUML

[[boost-155]]

== Boost 1.55

* New feature: interrupt states now support a sequence of events to end
the interruption
* Bugfix: Trac 8686.

[[boost-154]]

== Boost 1.54

* Bugfix: Exit points broken for the favor_compile_time policy.
* Bugfix: copy breaks exit points of subsubmachines.
* Bugfix: Trac 8046.

[[from-v223-to-v224-boost-151]]

== From V2.23 to V2.24 (Boost 1.51)

* Support for `boost::any` or `kleene` as an acceptable event.
* Bugfix: compiler error with fsm internal table and `none`(compound)
event.
* Bugfix: `euml::defer_` leading to stack overflow.

[[from-v222-to-v223-boost-150]]

== From V2.22 to V2.23 (Boost 1.50)

* `eUML` : better syntax for front-ends defined with eUML as transititon
table only. Caution: Breaking Change!
* Bugfix: graph building was only working if `initial_state` defined as